--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "axios": "^0.19.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-js-modal": "^2.0.1",
+    "vue-router": "^4.2.2",
+    "vue-simple-modal": "^1.1.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
