--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "laravel-echo": "^1.15.1",
+    "pusher-js": "^8.2.0",
     "vue": "^3.3.4",
     "vue-js-modal": "^2.0.1",
     "vue-router": "^4.2.2",
